[package]
name = "tracing-opentelemetry"
version = "0.17.0"
authors = [
    "Julian Tescher <julian@tescher.me>",
    "Tokio Contributors <team@tokio.rs>"
]
description = "OpenTelemetry integration for tracing"
homepage = "https://github.com/tokio-rs/tracing/tree/master/tracing-opentelemetry"
repository = "https://github.com/tokio-rs/tracing"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["tracing", "opentelemetry", "jaeger", "zipkin", "async"]
license = "MIT"
edition = "2018"
rust-version = "1.46.0"

[features]
default = ["tracing-log"]

[dependencies]
opentelemetry = { version = "0.17", package = "opentelemetry-spanprocessor-any", default-features = false, features = ["trace"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-core = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
tracing-log = { version = "0.1", default-features = false, optional = true }
instant = { git = "https://github.com/grafbase/instant", branch = "gb-3211-tracing_logging_panics", features = [ "wasm-bindgen", "inaccurate" ] }
worker = "0.0.13"
gloo-timers = "0.2"



[dev-dependencies]
async-trait = "0.1"
criterion = { version = "0.3", default_features = false }
opentelemetry-jaeger = "0.16"

[lib]
bench = false

[[bench]]
name = "trace"
harness = false
